[package]
name = "mini-fs"
version = "0.1.0"
authors = ["german gomez <germangb42@gmail.com>"]
edition = "2018"

[dependencies]
tar_ = { package = "tar", version = "0.4.23", optional = true }
flate2 = { version = "1.0.7", optional = true }

[features]
default = ["tar", "zip"]

tar = ["tar_", "flate2"]
zip = []
